fix(products): SD-4686 Fixed radio buttons layout issue

--- a/styles/less/forms.less
+++ b/styles/less/forms.less
@@ -576,7 +576,9 @@ form, ng-form {
             margin-bottom: 15px;
             width: 100%;
             .border-box();
-                        .control {
+            > .inline-label {
+                margin-left: 20px;
+                margin-right: -10px;
             }
         }
         label {
@@ -607,6 +609,7 @@ form, ng-form {
                 color: #333;
                 text-transform: none;
                 font-size: 13px;
+                line-height: 18px;
                 display: inline-block;
                 margin-right: 20px;
                 font-weight: 400;
